internal/xds/translator/testdata/out/xds-ir/authn-ratelimit.routes.yaml
- name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener
    routes:
    - match:
        path: foo/bar
      name: first-route
      route:
        cluster: first-route
        rateLimits:
        - actions:
          - headerValueMatch:
              descriptorKey: first-route-key-rule-0-match-0
              descriptorValue: first-route-value-rule-0-match-0
              expectMatch: true
              headers:
              - name: x-user-id
                stringMatch:
                  exact: one
      typedPerFilterConfig:
        envoy.filters.http.jwt_authn:
          '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
          requirementName: first-route
    - match:
        path: example
      name: second-route
      route:
        cluster: second-route
        rateLimits:
        - actions:
          - requestHeaders:
              descriptorKey: second-route-key-rule-0-match-0
              headerName: x-user-id
    - match:
        path: test
      name: third-route
      route:
        cluster: third-route
        rateLimits:
        - actions:
          - genericKey:
              descriptorKey: third-route-key-rule-0-match--1
              descriptorValue: third-route-value-rule-0-match--1
